fixed z-index bug with overlay, header, and sidebar

--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -1,5 +1,5 @@
 #header {
-    z-index: 20;
+    z-index: 50;
 }
 
 #header .right.menu {
@@ -7,7 +7,7 @@
 }
 
 #header .ui.menu {
-    z-index: 20;
+    z-index: 50;
     font-family: 'Open Sans', serif;
 	font-size: 150%;
 }
