--- a/assets/style/logo.css
+++ b/assets/style/logo.css
@@ -1,5 +1,5 @@
 #band-name {
-	z-index: 15;
+	z-index: 30;
 	width: 50%;
 	margin-top: 35vh;
 	transition: 1s;
